--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -59,6 +59,15 @@
 
 <script>
 
+  window.addEventListener("keydown", function(e) {
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
+    if (!audio){return;} // stops the function from running if an unsupported key is pressed
+    
+
+
+    console.log (audio);
+  });
+
 </script>
 
 
