--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -61,12 +61,26 @@
 
   window.addEventListener("keydown", function(e) {
     const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`)
+
     if (!audio){return;} // stops the function from running if an unsupported key is pressed
     
+    audio.currentTime = "0";
+    audio.play();
 
+    console.log(key);
 
-    console.log (audio);
+    key.classList.add('playing');
+    
   });
+
+  function removeTransition(e){
+    console.log(e);
+  }
+
+  const keys = document.querySelectorAll('.key');
+  keys.forEach(key => key.addEventListener('transitionend',removeTransition));
+
 
 </script>
 
