--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>STIZZMAS</title>
+  <title>JavaScript Drum Kit</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
